<resources>
    <string name="app_name">Fusion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <string name="are_you_new_to_fusion">Are you new to Fusion?</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="fusion_is_an_entertainment">Fusion is an entertainment platform that"\n"allows you and your friends enjoy the same"\n"fun content virtually.</string>
    <string name="virtual_cinema">Virtual Cinema</string>
    <string name="when_you_fuse">"When you fuse, there's no hush, you get mote"\n"popcorn, intimate crowds, all possible in the"\n"comfort of your couch. "</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_address">Email Address</string>
    <string name="please_enter_your_password">Please enter your"\n"password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_gmail">Sign In with gmail</string>
    <string name="please_enter_the_code_sent_to">Please enter the code sent"\nto</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="next">Next</string>
    <string name="enter_user_name">Enter Username</string>
    <string name="attherate">\@</string>
    <string name="please_enter_your_first_and_last_name">Please enter your"\n"first and last name</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="fusion">Fusion</string>
    <string name="edit_profie">Edit profile</string>
    <string name="setting">Settings</string>
    <string name="connected_accounts">Connected Accounts</string>
    <string name="privacy">Privacy</string>
    <string name="support">support</string>
    <string name="contact_us">Contact Us </string>
    <string name="log_out">Log Out</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="groups">Groups</string>
    <string name="add_group">Add Group</string>
    <string name="group_name">Group Name</string>
    <string name="description">Description</string>
    <string name="friends">Friends</string>
    <string name="add_friends">Add Friends</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invite">Invite</string>
    <string name="done">Done</string>
    <string name="group_setting">Group Settings</string>
    <string name="fusion_group_name">Fusion Group Name</string>
    <string name="fusion_color">Fusion Color</string>
    <string name="notification">Notifications</string>
    <string name="calendar">Calendar</string>
    <string name="schedule">Schedule</string>
    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select_type">Select Type</string>
    <string name="create_account">Create Account</string>
    <string name="johndoe">\@johndeo</string>
    <string name="group_details">Group Details</string>
    <string name="fuse_now">Fuse Now</string>
</resources>
