<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/txt_style_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                style="@style/et_style_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:hint="@string/email_address" />

            <TextView
                style="@style/txt_style_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/please_enter_the_code_sent_to"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_confirm_code"
                style="@style/et_style_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:hint="@string/confirm_code" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/blue_round_bg"
            android:fontFamily="@font/helvetica_neue"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textStyle="bold" />
    </RelativeLayout>
</layout>