<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/txt_style_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                style="@style/et_style_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:hint="@string/email_address" />

            <TextView
                style="@style/txt_style_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/please_enter_your_password"
                android:textStyle="bold" />

            <com.poovam.pinedittextfield.CirclePinField
                android:id="@+id/pin_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="number"
                android:textSelectHandle="@drawable/text_handle"
                android:textSize="14sp"
                app:circleRadius="14dp"
                app:fieldBgColor="@color/Silver"
                app:fillerColor="@color/colorPrimary"
                app:noOfFields="4" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_main"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/blue_round_bg"
            android:fontFamily="@font/helvetica_neue"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_sign_in"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/blue_round_bg"
            android:backgroundTint="@color/Black"
            android:fontFamily="@font/helvetica_neue"
            android:text="@string/sign_in_with_gmail"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_create"
            style="@style/txt_style_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_gmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/create_account"
            android:textStyle="bold" />
    </RelativeLayout>
</layout>