<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".activities.SettingActivity">

            <TextView
                style="@style/txt_style_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/setting"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/iv_back" />

            <TextView
                style="@style/txt_style_grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="APP Security"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="10dp"
                android:background="@color/Silver" />

            <TextView
                style="@style/txt_style_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/privacy"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="10dp"
                android:background="@color/Silver" />

            <TextView
                style="@style/txt_style_grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/support"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="10dp"
                android:background="@color/Silver" />

            <TextView
                style="@style/txt_style_black"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:shadowColor="#333333"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/contact_us"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="20dp"
                android:background="@color/Silver" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/Silver" />

            <TextView
                style="@style/txt_style_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/log_out"
                android:textColor="@color/Red"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="20dp"
                android:background="@color/Silver" />
        </LinearLayout>
    </RelativeLayout>
</layout>