<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            tools:context=".activities.SettingActivity">

            <TextView
                style="@style/txt_style_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/add_group"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/iv_back" />

            <TextView
                style="@style/txt_style_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:paddingRight="20dp"
                android:shadowColor="#333333"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/group_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:hint="@string/group_name"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/Black"
                android:textColorHint="@color/app_dark_grey" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="5dp"
                android:background="@color/Silver" />

            <TextView
                style="@style/txt_style_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:paddingRight="20dp"
                android:shadowColor="#333333"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/description"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:hint="@string/description"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/Black"
                android:textColorHint="@color/app_dark_grey" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="5dp"
                android:background="@color/Silver" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_main"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/blue_round_bg"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>